--- a/REPO-DeadTTS.csproj
+++ b/REPO-DeadTTS.csproj
@@ -40,6 +40,10 @@
     <Reference Include="BepInEx">
       <HintPath>..\..\..\Downloads\BepInEx-BepInExPack-5.4.2100\BepInExPack\BepInEx\core\BepInEx.dll</HintPath>
     </Reference>
+    <Reference Include="Klattersynth, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\REPO\REPO_Data\Managed\Klattersynth.dll</HintPath>
+    </Reference>
     <Reference Include="PhotonRealtime, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\REPO\REPO_Data\Managed\PhotonRealtime.dll</HintPath>
